src/test/deca/context/valid/return/return_boolean_logic.deca
// Description :
// Retour d’une expression logique bool
//
// Resultats :
// ok

class C {
    boolean f(boolean a, boolean b) {
        return (a && !b) || (b && !a);
    }
}
