src/test/deca/context/invalid/avecObjet/call_method_on_boolean.deca
// Description :
//    Appel de méthode sur une expression de type boolean.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

{
    boolean b = true;
    b.f();
}

